--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "main.js",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
     "hbs": "^4.1.2",
     "http": "0.0.1-security",
     "path": "^0.12.7",
+    "request": "^2.88.2",
+    "response": "^0.18.0",
     "socket.io": "^4.0.1",
     "vue": "^2.6.12"
   },
