change where connecting was

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "request": "^2.88.2",
     "response": "^0.18.0",
+    "ros": "^1.0.4",
     "socket.io": "^4.0.1",
     "vue": "^2.6.12"
   },
